welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:22: error: Unmatched closing brace '}' ignored here
}
^